# vscode-dwarf-debugging

./: .gitignore  .npmignore  README.md  esbuild.js  package-lock.json  package.json  pipeline.yml  tsconfig.json
chrome-cxx/: Dockerfile
chrome-cxx/mnt/: do-copy.sh
src/: CustomFormatters.ts  DWARFLanguageExtensionPlugin.ts  ExtensionAPI.d.ts  Formatters.ts  PathUtils.ts  RPCInterface.ts  ResourceLoader.ts  SymbolsBackend.d.ts  WasmTypes.ts  WorkerRPC.ts  embind.ts  index.ts  inject.ts  worker.ts
test/: CustomFormatters.test.ts  Formatters.test.ts  LLDBEval.test.ts  PathUtils.test.ts  SymbolsBackend.test.ts  WasmWorker.test.ts  mandelbrot.test.ts
test-utils/: DebuggerSession.ts  LLDBEvalDebugger.ts  SymbolsBackendPlugin.ts  TestValue.ts  TestWasmInterface.ts
test-utils/emscripten-module-runner/: child-process.js  index.ts  prelude.js
test-utils/sync-interface/: index.ts  worker.js
test/e2e/: e2e-specs.test.ts  lldb-eval.test.ts
test/resources/: mandelbrot.wasm
wasm/: build-e2e.sh  build-stage-1.sh  build-stage-2.sh  build.sh  fetch-git.sh  generate-e2e-resources-build
wasm/builder/: Dockerfile
wasm/e2e/: cpp_eval.yaml  pointer.yaml  rust_app.yaml  scope_view_non_primitives.yaml  scope_view_non_primitives_cpp.yaml  scope_view_primitives.yaml  stepping_with_state.yaml  string_view.yaml  test_big_dwo.yaml  test_loop.yaml  test_wasm_simd.yaml  vector.yaml  wchar.yaml
wasm/e2e/resources/: app.rs  huge-source-file.cc  pointers.cc  scope-view-non-primitives.c  scope-view-non-primitives.cpp  scope-view-primitives.c  stepping-with-state.c  test_wasm_simd.c  vector.cc  wchar.cc
wasm/symbols-backend/: CMakeLists.txt  README.md
wasm/symbols-backend/lib/: ApiContext.cc  ApiContext.h  Expressions.cc  Expressions.h  Variables.cc  Variables.h  WasmModule.cc  WasmModule.h  WasmVendorPlugins.cc  WasmVendorPlugins.h  api.h
wasm/symbols-backend/src/: CMakeLists.txt  SymbolsBackend.cc
wasm/symbols-backend/tests/: CMakeLists.txt  LLDBEvalExtensions.h  LLDBEvalTests.d.ts  SymbolsBackendTests.d.ts  WasmModule_test.cc
wasm/symbols-backend/tests/inputs/: CMakeLists.txt  addresses.cc  string_view.cc
